@@ -51,16 +51,17 @@ Eduardo Filpo Silva <effsilva@mines.edu>
 Xiaolei Song <songxl1984@gmail.com>
 Yanadet Sripanich <sripanichy@utexas.edu>
 Junzhe Sun <sunjzhe@gmail.com>
+Layamrudhaa Venkatesan <layamrudhaarv@utexas.edu>
 Ioan Vlad <i.vlad@yahoo.com>
-Pengliang Yang <ypl.2100@gmail.com>
 Hui Wang <hui.wang@kaust.edu.sa>
 Robin Weiss <robin.weiss@uwa.edu.au>
 Zedong Wu <zedong.wu@kaust.edu.sa>
 Zhugiang Xue <zhiguangxue@gmail.com>
 Jia Yan <jyan@mines.edu>
+Pengliang Yang <ypl.2100@gmail.com>
 Lexing Ying <lexing@math.utexas.edu>
 Hejun Zhu <hzhu@jsg.utexas.edu>
-Layamrudhaa Renganathan Venkatesan <layamrudhaarv@utexas.edu>
+
 
 Vplot authors:
 
